tests/rustdoc-ui/impl-fn-nesting.stderr
error: cannot find macro `unknown_macro` in this scope
  --> $DIR/impl-fn-nesting.rs:33:13
   |
LL |             unknown_macro!();
   |             ^^^^^^^^^^^^^

error[E0405]: cannot find trait `UnknownBound` in this scope
  --> $DIR/impl-fn-nesting.rs:12:13
   |
LL | pub fn f<B: UnknownBound>(a: UnknownType, b: B) {
   |             ^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `UnknownType` in this scope
  --> $DIR/impl-fn-nesting.rs:12:30
   |
LL | pub fn f<B: UnknownBound>(a: UnknownType, b: B) {
   |                              ^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `UnknownTrait` in this scope
  --> $DIR/impl-fn-nesting.rs:15:10
   |
LL |     impl UnknownTrait for ValidType {}
   |          ^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `UnknownTrait` in this scope
  --> $DIR/impl-fn-nesting.rs:16:27
   |
LL |     impl<T: UnknownBound> UnknownTrait for T {}
   |                           ^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `UnknownBound` in this scope
  --> $DIR/impl-fn-nesting.rs:16:13
   |
LL |     impl<T: UnknownBound> UnknownTrait for T {}
   |             ^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `UnknownType` in this scope
  --> $DIR/impl-fn-nesting.rs:19:25
   |
LL |     impl ValidTrait for UnknownType {}
   |                         ^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `UnknownBound` in this scope
  --> $DIR/impl-fn-nesting.rs:21:53
   |
LL |     impl ValidTrait for ValidType where ValidTrait: UnknownBound {}
   |                                                     ^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `UnknownType` in this scope
  --> $DIR/impl-fn-nesting.rs:26:21
   |
LL |         type Item = UnknownType;
   |                     ^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `UnknownType` in this scope
  --> $DIR/impl-fn-nesting.rs:45:37
   |
LL |             pub fn doubly_nested(c: UnknownType) {
   |                                     ^^^^^^^^^^^ not found in this scope

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0405, E0425.
For more information about an error, try `rustc --explain E0405`.
